# mpc_cpp

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: LinearSys.h  LinearSys.tpp  mpc.h  ode.h
include/impl/: mpc.tpp
scripts/: sys_plot.py
src/: LinearSys.cpp  main.cpp  mpc.cpp  ode.cpp
